--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,15 @@
   "display": "standalone",
   "start_url": "./",
   "scope":".",
-  "name": "WhatStranger",
-  "short_name": "WhatStranger",
+  "name": "YourWebAppName",
+  "short_name": "YourWebAppName",
   "icons": [
+    {
+      "src": "images/maskable_icon.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
     {
       "src": "images/icon-72x72.png",
       "sizes": "72x72",
